tests/suite/snapshots/suite__check__tests__check__bad_multiarray_2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_multiarray_2.xi:2:18]
   │
 2 │     x:bool[][] = {true,false}
   ·     ─────┬────   ──────┬─────  
   ·          ╰───────────────────── Expected bool[][] because of this
   ·                        │       
   ·                        ╰─────── Expected bool[][] but found bool[]
───╯

